--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-spring.data.mongodb.authentication-database=${DB_AUTHENTICATION}
+spring.data.mongodb.uri=mongodb+srv://${DB_USERNAME}:${DB_PASSWORD}@oriondb.suukokn.mongodb.net/${DATABASE}
 spring.data.mongodb.database=${DATABASE}
-spring.data.mongodb.username=${DB_USERNAME}
-spring.data.mongodb.password=${DB_PASSWORD}
-spring.data.mongodb.uri=${DB_URI}
